--- a/library.html
+++ b/library.html
@@ -26,16 +26,16 @@
                         <div Library Dropdown class="dropdown">
                             <li><a href="library.html">My Library</a></li>
                             <div class="dropdown-content">
-                                 <a href="library.html#percy-jackson">Percy Jackson🔱</a>
-                                 <a href="library.html#heroes-olympus">Heroes of Olympus🏛️</a>
-                                 <a href="library.html#divergent">Divergent🔥</a>
-                                 <a href="library.html#hunger-games">The Hunger Games🏹</a>
-                                 <a href="library.html#off-campus">Off-Campus🏒</a>
-                                 <a href="library.html#briar-u">Briar U🏫</a>
-                                 <a href="library.html#bridgerton">Bridgerton🪶</a>
-                                 <a href="library.html#twisted">Twisted💵👑🩺💻</a>
-                                 <a href="library.html#kings-sin">Kings of Sin💍🦚🏵️⏱️</a>
-                                 <a href="library.html#shatter-me">Shatter Me👁️</a>
+                                 <a href="library.html#percy-jackson">Percy Jackson</a>
+                                 <a href="library.html#heroes-olympus">Heroes of Olympus</a>
+                                 <a href="library.html#divergent">Divergent</a>
+                                 <a href="library.html#hunger-games">The Hunger Games</a>
+                                 <a href="library.html#off-campus">Off-Campus</a>
+                                 <a href="library.html#briar-u">Briar U</a>
+                                 <a href="library.html#bridgerton">Bridgerton</a>
+                                 <a href="library.html#twisted">Twisted</a>
+                                 <a href="library.html#kings-sin">Kings of Sin</a>
+                                 <a href="library.html#shatter-me">Shatter Me</a>
                             </div>
                         </div>
                     
